// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button.Icon /> is available 1`] = `
<button
  aria-busy={false}
  className="button"
  disabled={false}
  type="button"
>
  <Icon
    name="icon:core/operations/betweenAccounts"
    onClick={[Function]}
    onError={[Function]}
    size="self"
    theme={
      Object {
        "self": "self icon",
      }
    }
  />
  <span
    className="title black md"
  >
    title
  </span>
</button>
`;

exports[`<Button.Icon /> is disabled when mode=loading 1`] = `
<button
  aria-busy={true}
  className="button"
  disabled={true}
  mode="loading"
  type="button"
>
  <Loader.Icon
    colorScheme="dark"
    size="lg"
  />
  <span
    className="title black md"
  >
    title
  </span>
</button>
`;

exports[`<Button.Icon /> title has classNames "sm", "green" 1`] = `
<button
  aria-busy={false}
  className="button"
  disabled={false}
  type="button"
>
  <Icon
    name="icon:core/operations/betweenAccounts"
    onClick={[Function]}
    onError={[Function]}
    size="self"
    theme={
      Object {
        "self": "self icon",
      }
    }
  />
  <span
    className="title green sm"
  >
    title
  </span>
</button>
`;
